# as-multi-lingual-programming-language

./: .gitignore  CMakeLists.txt  LICENSE-APACHE-2.0  LICENSE-MIT  README.md
examples/: hello_world.as
include/: ast.h  codegen.h  ir.h  lexer.h  optimizer.h  parser.h  runtime.h  sandbox.h  semantic.h  vm.h
runtime/: math.as
src/: ast.as  ast.cpp  codegen.as  codegen.cpp  ir.as  ir.cpp  lexer.as  lexer.cpp  main.cpp  optimizer.as  optimizer.cpp  parser.as  parser.cpp  runtime.as  runtime.cpp  sandbox.as  sandbox.cpp  semantic.as  semantic.cpp  vm.as  vm.cpp
